# polymarket-trader

./: .env.example  .gitignore  README.md  langgraph.json  pyproject.toml
examples/: __init__.py  quickstart.py
frontend/: .gitignore  README.md  package-lock.json  package.json
frontend/public/: logo_lottie.json
frontend/src/app/: page.tsx
frontend/src/app/api/polymarket/market/: route.ts
frontend/src/types/: index.ts
src/polymarket_agent/: __init__.py  graph.py  models.py  storage.py  tools.py
tests/: test_components.py
